# claude-worktree

./: CHANGELOG.md  CLAUDE.md  README.md  TEST_AI_PR.md  TEST_CLAUDE.md  TODO.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: auto-release.yml  publish.yml  test-shell-functions.yml  test.yml
docs/: commands.md  configuration.md
scripts/: release.py
src/claude_worktree/: cli.py  config.py  constants.py  core.py  git_utils.py  helpers.py  registry.py  session_manager.py  slash_command_setup.py  tui.py  update.py
src/claude_worktree/operations/: __init__.py  ai_tools.py  backup_ops.py  config_ops.py  diagnostics.py  display.py  git_ops.py  global_ops.py  helpers.py  stash_ops.py  worktree_ops.py
src/claude_worktree/shell_functions/: cw.bash  cw.fish  cw.ps1
src/claude_worktree/slash_commands/: __init__.py  cw.md
tests/: conftest.py  test_backup_restore.py  test_cli.py  test_config.py  test_core.py  test_export_import.py  test_git_utils.py  test_global_ops.py  test_launch_methods.py  test_registry.py  test_session_manager.py  test_shared_files.py  test_update.py
tests/e2e/: README.md  test_shell_functions.py  test_workflows.py
